Refactor: Ajustes em textos

--- a/index.html
+++ b/index.html
@@ -99,8 +99,9 @@ const coder = {
     name: 'Felipe Meneguzzi',
     company: 'Coop Cred. Uniprime Sul',
     location: 'Brasil',
-    skills: ['Java', 'Spring Boot', 'SQLServer', 'API Rest',
-             'Microservices', 'Docker', 'AWS'],
+    skills: ['Java', 'Spring Boot', 'SQLServer', 
+             'API Rest', 'Microservices', 
+             'Docker', 'AWS'],
     hireable: true,
     contact: 'lipemeneguzzi@gmail.com'
 };
@@ -276,9 +277,8 @@ const coder = {
                                     <div class="card-body">
                                         <h5 class="card-title">MoneyMap Investimentos</h5>
                                         <p class="card-text">Um dos meus ultilimos projetos realizados. Tratasse de uma
-                                            Site
-                                            web
-                                            de gerenciamento de ativos, com base na Bolsa de Valores.</p>
+                                            Site web de Gerenciamento de Ações, Fiis e etc. Nele é possivel organizar
+                                            seus ativos, gerenciar lucro e perdas e demais funcionalidades baseadas no investidor.</p>
                                         <div class="d-flex justify-content-center">
                                             <a href="#" class="btn btn-outline-light px-4">Saiba Mais</a>
                                         </div>
@@ -294,10 +294,9 @@ const coder = {
                                     <img src="./image/AutoStock Car.png" class="card-img-top p-4 rounded" alt="...">
                                     <div class="card-body">
                                         <h5 class="card-title">Auto Stock Car</h5>
-                                        <p class="card-text">Projeto realizado puramente em Java, dês do Back até o
-                                            front. É
-                                            um software ERP voltado
-                                            para o controle de estoque de peças automotivas.
+                                        <p class="card-text">Sistema de gerenciamento de estoque com funcionalidade de vendas, 
+                                            desenvolvido em Java, com GUI pura. Permite cadastro, atualização, remoção e controle
+                                             de produtos em tempo real.
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/AutoStockCar"
@@ -382,12 +381,8 @@ const coder = {
                                         <p class="card-text">Este projeto foi desenvolvido como parte de um programa de
                                             bolsa
                                             e tem como objetivo demonstrar os fundamentos de uma aplicação estilo "rede
-                                            social",
-                                            onde usuários podem publicar posts, curtir e comentar. Toda a aplicação foi
-                                            construída
-                                            utilizando Java com Spring Boot e banco de dados MongoDB, focando em boas
-                                            práticas de
-                                            desenvolvimento e organização de código.
+                                            social", utiliza Java com Spring Boot e banco de dados MongoDB, focando em boas
+                                            práticas desenvolvimento e organização de código.
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/WorkShop-Spring-MongoDB"
