Refactor/URL atualizada

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ const coder = {
                                 <input type="hidden" name="_captcha" value="false">
 
                                 <!-- Redireciona após o envio -->
-                                <input type="hidden" name="_next" value="http://127.0.0.1:3000/">
+                                <input type="hidden" name="_next" value="https://portifolioprogramador.netlify.app/#contact">
 
                                 <div class="d-flex justify-content-center">
                                     <button type="submit" class="btn btn-primary">Enviar</button>
