Refactor: Ajustes de Responsividade

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ const coder = {
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="d-flex justify-content-center gap-4 mb-5">
                                 <!-- Projeto 2 -->
                                 <div class="card bg-dark text-white shadow-lg border-0" style="width: 25rem;">
@@ -307,7 +307,7 @@ const coder = {
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="d-flex justify-content-center gap-4 mb-5">
                                 <!-- Projeto 3-->
                                 <div class="card bg-dark text-white shadow-lg border-0" style="width: 25rem;">
@@ -328,7 +328,7 @@ const coder = {
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="d-flex justify-content-center gap-4 mb-5">
                                 <!-- Projeto 4 -->
                                 <div class="card bg-dark text-white shadow-lg border-0" style="width: 25rem;">
@@ -350,7 +350,7 @@ const coder = {
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="d-flex justify-content-center gap-4 mb-5">
                                 <!-- Projeto 5 -->
                                 <div class="card bg-dark text-white shadow-lg border-0" style="width: 25rem;">
@@ -371,7 +371,7 @@ const coder = {
                             </div>
                         </div>
 
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <div class="d-flex justify-content-center gap-4 mb-5">
                                 <!-- Projeto 5 -->
                                 <div class="card bg-dark text-white shadow-lg border-0" style="width: 25rem;">
