--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ const coder = {
                                             Site web de Gerenciamento de Ações, Fiis e etc. Nele é possivel organizar
                                             seus ativos, gerenciar lucro e perdas e demais funcionalidades baseadas no investidor.</p>
                                         <div class="d-flex justify-content-center">
-                                            <a href="#" class="btn btn-outline-light px-4">Saiba Mais</a>
+                                            <a href="#" target="_blank" class="btn btn-outline-light px-4">Projeto em Andamento</a>
                                         </div>
                                     </div>
                                 </div>
@@ -300,7 +300,7 @@ const coder = {
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/AutoStockCar"
-                                                class="btn btn-outline-light px-4">Saiba Mais</a>
+                                                target="_blank" class="btn btn-outline-light px-4">Saiba Mais</a>
                                         </div>
                                     </div>
                                 </div>
@@ -321,7 +321,7 @@ const coder = {
                                             e politicas internas da empresa.
                                         </p>
                                         <div class="d-flex justify-content-center">
-                                            <a href="#" class="btn btn-outline-light px-4">Projeto Privado</a>
+                                            <a href="#" target="_blank" class="btn btn-outline-light px-4">Projeto Privado</a>
                                         </div>
                                     </div>
                                 </div>
@@ -343,7 +343,7 @@ const coder = {
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/ProcessamentoDeImagem"
-                                                class="btn btn-outline-light px-4">Saiba Mais</a>
+                                               target="_blank" class="btn btn-outline-light px-4">Saiba Mais</a>
                                         </div>
                                     </div>
                                 </div>
@@ -364,7 +364,7 @@ const coder = {
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/Park-API"
-                                                class="btn btn-outline-light px-4">Saiba Mais</a>
+                                                target="_blank" class="btn btn-outline-light px-4">Saiba Mais</a>
                                         </div>
                                     </div>
                                 </div>
@@ -386,7 +386,7 @@ const coder = {
                                         </p>
                                         <div class="d-flex justify-content-center">
                                             <a href="https://github.com/Felipe-Meneguzz1/WorkShop-Spring-MongoDB"
-                                                class="btn btn-outline-light px-4">Saiba Mais</a>
+                                               target="_blank" class="btn btn-outline-light px-4">Saiba Mais</a>
                                         </div>
                                     </div>
                                 </div>
